// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcModal should have the ec-modal--lg class 1`] = `
<div
  class="ec-modal__content ec-modal--lg"
>
  <header
    class="ec-modal__header"
  >
     
    <svg
      class="ec-modal__close ec-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </header>
   
  <main
    class="ec-modal__main"
  />
   
  <footer
    class="ec-modal__footer"
  >
    <!---->
     
    <!---->
     
    <!---->
  </footer>
</div>
`;

exports[`EcModal should not render close button when showCloseIcon is set to false 1`] = `
<header
  class="ec-modal__header"
>
   
  <!---->
</header>
`;

exports[`EcModal should not render footer left section 1`] = `
<footer
  class="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <!---->
</footer>
`;

exports[`EcModal should not render negative button if slot not passed 1`] = `
<footer
  class="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <!---->
</footer>
`;

exports[`EcModal should not render positive button if slot not passed 1`] = `
<footer
  class="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <!---->
</footer>
`;

exports[`EcModal should not render the modal if "showModal" is not set to true 1`] = `<!---->`;

exports[`EcModal should render basic modal 1`] = `
<div
  class="ec-modal"
  name="ec-modal--fade"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    >
      <p>
        Before we can process your application we need you to upload your management accounts. You can do this now or leave it for later.
      </p>
    </main>
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should render close button 1`] = `
<header
  class="ec-modal__header"
>
   
  <svg
    class="ec-modal__close ec-icon"
    height="24"
    width="24"
  >
    <use
      xlink:href="#ec-simple-close"
    />
  </svg>
</header>
`;

exports[`EcModal should render footer left section when "showFooterLeftContent" is set to true 1`] = `
<footer
  class="ec-modal__footer"
>
  <div
    class="ec-modal__footer-left-content"
  />
   
  <!---->
   
  <!---->
</footer>
`;

exports[`EcModal should render negative button if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
>
  <!---->
   
  <button
    class="ec-modal__negative-btn ec-btn ec-btn--md ec-btn--secondary ec-btn--rounded ec-modal__negative-btn--right"
  >
    Skip for now
  </button>
   
  <!---->
</footer>
`;

exports[`EcModal should render positive button if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <button
    class="ec-modal__positive-btn ec-btn ec-btn--md ec-btn--primary ec-btn--rounded ec-modal__positive-btn--right"
  >
    Update management accounts
  </button>
</footer>
`;
